# lives_dunossauro

./: README.md
live_139_sqlalchemy_orm/: README.md  exemplo_01.py  pyproject.toml  teste.db
live_140_wtforms/: .ycm_extra_conf.py  app.py  pyproject.toml
live_140_wtforms/templates/: cadastro.html
live_159_celery/: app.py  pyproject.toml  tasks.py
live_50_agendamento_tarefas/: exemplo_01.py  exemplo_02.py  exemplo_03.py  pyproject.toml
live_51_multiprocessamento/: exemplo_01.py  pyproject.toml
live_52_threads/: decomposicao.py  functions.py  pyproject.toml
live_56_desenvolvimento_web_com_python_e_flask/: app.py  contact.py  pyproject.toml  views.py
live_56_desenvolvimento_web_com_python_e_flask/templates/: contact.html  index.html
minisserie_pythonica_funcoes/: README.md  exemplo_01.py  exemplo_02.py  pyproject.toml
