[tool.poetry]
name = "live_139_sqlalchemy_orm"
version = "0.1.0"
description = ""
authors = ["Everson Ott <everson.ott@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
