[tool.poetry]
name = "live_51_multiprocessamento"
version = "0.1.0"
description = ""
authors = ["eversonott <everson.ott@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
ipython = "^7.21.0"
pylint = "^2.7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
