[tool.poetry]
name = "live_56_desenvolvimento_web_com_python_e_flask"
version = "0.1.0"
description = ""
authors = ["Everson Ott <everson.ott@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
